2010-10-18  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Antonio Gomes.

        [QT] Unable to load pages on QtTestBrowser after canceling a page load.
        https://bugs.webkit.org/show_bug.cgi?id=43827

        * Api/qwebpage.cpp:
        (QWebPage::triggerAction):

Canonical link: https://commits.webkit.org/60527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69961 268f45cc-cd09-0410-ab3c-d52691b4dbfc